2006-06-25 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j70-UNSTABLE

 *** !!! CHANGE !!! ***

 * Created popups/ folder and moved nearly all popups in it

 * Removed HTML Validation link everywhere.
 
 * Adjust includes etc. in popups

 * Tweaked makeGalleryURL
 
2006-06-25 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j69-UNSTABLE

 * Fix: Statusbar was little broken in captionar.php

 * Fix: Error when custom field was not translateable in captionator.php

 * Added debugmessages in classes/gallery/UserDB.php

 * Changed Wording for User integritycheck

 * Nicified layout/watermarkform.inc

 * Fix: invalid css

2006-06-22 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j68-UNSTABLE

 * Accesskeys in item Commands.

2006-06-22 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j67-UNSTABLE

 * Change from _() to gTranslate at various places.

2006-06-22 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j66-UNSTABLE

 * NEW: Functionality to recreate all captions of an album (recursiv if wanted)

 * New: Folder for popups

2006-06-20 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j65-UNSTABLE

 * Bugfix for b64 ;)

2006-06-20 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j64-UNSTABLE

 * Accesskey Changes:
	- Additional param to getIconText() to set a stickyAlt, regardless the iconmode
	- New function getAccessKey($text)
	- New function removeAccessKey($text)
	- make_separator() now works with accesskeys
	- array_sort now doesnt fall over accesskeys

 * Accesskey Use in
	includes/definitions/albumProperties.php
	delete_photo.php
	lib/albumItem.php
	layout/navigator.inc
	layout/navphoto.inc

 * Change: Use of LoginLogoutButton in view_photo.php

 * NEW: function galleryIconLink($url, $icon, $text, $iconMode = '', $attrList = array())
 
2006-06-19 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j63-UNSTABLE

 * Change: Reworked checkVersions().
   It not returns one array and the calling procedure needs to figure out what to do.

 * Change: Adjust check_gallery_versions() and setup/check_versions.php to above changes.
