@@ -1,3 +1,7 @@
+2006-06-26 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j71-UNSTABLE
+
+ * New: Added popups/recreate_captions.php
+
 2006-06-25 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j70-UNSTABLE
 
  *** !!! CHANGE !!! ***
